--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                             <span class="sr-only">Close menu</span>
                             </button>
                             <ul class="flex flex-col flex-wrap justify-evenly mt-4">
-                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="index.html" class="head-text py-2">Iwin88 Game</a></li>
-                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="agent.html" class="head-text py-2">Bigfish Casino</a></li>
-                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="index.html" class="head-text py-2">Ipad-Game</a></li>
-                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="blog.html" class="head-text py-2">Android Game</a></li>
-                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="contact.html" class="head-text py-2">Contact Us</a></li>
+                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="#" class="head-text py-2">Iwin88 Game</a></li>
+                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="#" class="head-text py-2">Bigfish Casino</a></li>
+                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="#" class="head-text py-2">Ipad-Game</a></li>
+                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="#" class="head-text py-2">Android Game</a></li>
+                                <li class=" menu text-md text-gray-50 py-2 m-2 font-bold"><a href="#" class="head-text py-2">Contact Us</a></li>
                                 <span class="py-2 m-2 text-xl text-gray-50 text-center"><i class="bi bi-reception-0"></i><i class="bi bi-reception-0"></i><i class="bi bi-reception-0"></i><i class="bi bi-reception-0"></i><i class="bi bi-reception-0"></i></span>
                             </ul>
                         </div>
@@ -83,11 +83,11 @@
                     <!-- menu -->
                     <div class="head-item2 w-7/12">
                         <ul class="ul-menu flex justify-around">
-                            <a href="" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Iwin88 Game</a>
-                            <a href="" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">BigFish Casino</a>
-                            <a href="" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Ipad-Game</a>
-                            <a href="" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Android-Game</a>
-                            <a href="" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Contact Us</a>
+                            <a href="#" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Iwin88 Game</a>
+                            <a href="#" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">BigFish Casino</a>
+                            <a href="#" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Ipad-Game</a>
+                            <a href="#" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Android-Game</a>
+                            <a href="#" class="menu-item text-white text-md font-semibold hover:text-green-400 p-6 ">Contact Us</a>
                         </ul>
                     </div>
                     <!-- search -->
